test/compile_errors/err_fstring_spec_alt_on_float.w
//! expect-check-fail: alternate form '#' requires integer type
fn main:
    let x = 3.14
    print(f"{x:#f}")
